# prong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  chains_and_runnables.cpp  openai_chat_model.cpp  prompt_type_safety.cpp  simple_chat_model.cpp
examples/src/: chains_and_runnables.cpp  openai_chat_model.cpp  openai_chat_stream.cpp  prompt_type_safety.cpp  simple_chat_model.cpp
include/: prong.h  prong_integrations.h
include/prong/: apply_to_tuple.h  chat_prompt.h  chat_stream.h  combined_runnable.h  message.h  message_prompt.h  prompt.h  prompt_runnable.h  runnable.h  string_literal.h  substitution.h  substitution_vector.h  template_string.h
include/prong_integrations/chat_models/: openai_chat_model.h
include/prong_integrations/runnables/: http_runnable.h
include/prong_integrations/utils/: root_certificates.h  simple_http_client.h  simple_https_client.h
tests/: CMakeLists.txt  simple_http_client.test.cpp
tests/src/: chat_prompt.cpp  combined_runnable.cpp  message_prompt.cpp  message_test.cpp  prompt.cpp  prompt_runnable.cpp  runnable.cpp  simple.cpp  string_literal.cpp  substitution.cpp
